<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <LinearLayout
        android:id="@+id/headerMain"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp" >

        <TextView
            android:id="@+id/tvHeaderTextMain"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/textVisitControls"
            android:textColor="@color/Red"
            android:textSize="15dp"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollHomeOptions"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/layoutHomeContents"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imgViewBanner"
                android:layout_width="fill_parent"
                android:layout_height="100dp"
                android:background="@drawable/banner" />

            <Button
                android:id="@+id/buttonVisitButtons"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/buttonVisitButtons" />

            <Button
                android:id="@+id/buttonVisitAnotherControls"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/buttonVisitAnotherControls" />
        </LinearLayout>
    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/Blue" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="bottom"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="Got Register"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="Login Now"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonExit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="Exit"
            android:textStyle="bold" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/Blue" />

    <ScrollView
        android:id="@+id/simpleScroll"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="8" >

                <Button
                    android:id="@+id/btnDemo1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Btn1"
                    android:textColor="@color/Red" />

                <Button
                    android:id="@+id/btnDemo2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:text="Btn2"
                    android:textColor="@color/Green" />

                <Button
                    android:id="@+id/btnDemo3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Btn3"
                    android:textColor="@color/Blue" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="8" >

                <Button
                    android:id="@+id/btnDemo4"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:text="Btn1"
                    android:textColor="@color/Blue" />

                <Button
                    android:id="@+id/btnDemo5"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_weight="6"
                    android:text="Btn2"
                    android:textColor="@color/Red" />

                <Button
                    android:id="@+id/btnDemo6"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:text="Btn3"
                    android:textColor="@color/Green" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="8" >

                <Button
                    android:id="@+id/btnDemo7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Btn1"
                    android:textColor="@color/Green" />

                <Button
                    android:id="@+id/btnDemo8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:text="Btn2"
                    android:textColor="@color/Blue" />

                <Button
                    android:id="@+id/btnDemo9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Btn3"
                    android:textColor="@color/Red" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/Blue" />

</LinearLayout>